[metadata]
name = neptune-python-utils
version = 0.0.1
author = Ian Robinson
author_email = ianrob@amazon.com
description = Python 3 library that simplifies using Gremlin-Python to connect to Amazon Neptune.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/awslabs/amazon-neptune-tools/tree/master/neptune-python-utils
project_urls =
    Bug Tracker = https://github.com/awslabs/amazon-neptune-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    gremlinpython==3.5.1
    requests
    backoff
    cchardet
    aiodns
    idna-ssl

[options.packages.find]
where = src